--- a/ex01/Cinema/pom.xml
+++ b/ex01/Cinema/pom.xml
@@ -65,6 +65,11 @@
       <artifactId>h2</artifactId>
       <version>2.1.214</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.3</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>cinema</finalName>
