--- a/ex02/Cinema/pom.xml
+++ b/ex02/Cinema/pom.xml
@@ -70,6 +70,16 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.13.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-websocket</artifactId>
+      <version>5.3.22</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-messaging</artifactId>
+      <version>5.2.22.RELEASE</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>cinema</finalName>
