--- a/ex02/Cinema/pom.xml
+++ b/ex02/Cinema/pom.xml
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-websocket</artifactId>
-      <version>5.3.22</version>
+      <version>5.2.2.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
